kubernetes/fastapi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: api
spec:
  selector:
    app: fastapi
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  type: ClusterIP
